# SampleConsole

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  compile_flags.txt  console_config.ini  imgui.ini  main.cpp
glad/include/glad/: glad.h
glad/src/: glad.c
src/: App.cpp  App.h  Console.cpp  Console.h  MenuBar.cpp  MenuBar.h  SearchPanel.cpp  SearchPanel.h  ShortcutManager.cpp  ShortcutManager.h  XmlViewer.cpp  XmlViewer.h
